Fix spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 #FDF0CD
 */
 
-.img-placeholder {
+.fade-in-placement{
   width: 100%;
 }
 
@@ -31,9 +31,6 @@ body, .jumbotron {
   color: #ecede6;
 }
 
-.container-fluid {
-  padding: 0 5% 0 5%;
-}
 
 .character-stats {
  width: 100%
@@ -172,8 +169,10 @@ a:hover {
 
 #img1 {
   display: none;
+  width: 100%;
 }
 
 #img2 {
   display: none;
+  width: 100%;
 }
